2012-12-13  Yoshifumi Inoue  <yosin@chromium.org>

        Copy platform/win/fast/events/panScroll-* to platform/chromium-win/fast/events
        https://bugs.webkit.org/show_bug.cgi?id=104991

        This patch copies pan scrolling related test from Win port to Chromium-Win port
        for catching pan scrolling breakage on Chromium-Win port.

        * platform/chromium/TestExpectations: Disables panScroll tests other than Windows.
        * platform/chromium-win/fast/events/panScroll-click-hyperlink-expected.txt: Copied from platform/mac/fast/events.
        * platform/chromium-win/fast/events/panScroll-click-hyperlink.html: ditto
        * platform/chromium-win/fast/events/panScroll-event-fired-expected.txt: ditto
        * platform/chromium-win/fast/events/panScroll-event-fired.html: ditto
        * platform/chromium-win/fast/events/panScroll-nested-divs-expected.txt: ditto.
        * platform/chromium-win/fast/events/panScroll-nested-divs.html: ditto

2012-12-14  Yoshifumi Inoue  <yosin@chromium.org>

        Unreviewed, rolling out r137720.
        http://trac.webkit.org/changeset/137720
        https://bugs.webkit.org/show_bug.cgi?id=104991

        Wrong Commit

        * platform/chromium/TestExpectations:

2012-12-14  Yoshifumi Inoue  <yosin@chromium.org>

        Unreviewed, rolling out r137719.
        http://trac.webkit.org/changeset/137719
        https://bugs.webkit.org/show_bug.cgi?id=104991

        Wrong commit

        * platform/chromium-win/fast/events/panScroll-click-hyperlink-expected.txt: Removed.
        * platform/chromium-win/fast/events/panScroll-click-hyperlink.html: Removed.
        * platform/chromium-win/fast/events/panScroll-event-fired-expected.txt: Removed.
        * platform/chromium-win/fast/events/panScroll-event-fired.html: Removed.
        * platform/chromium-win/fast/events/panScroll-nested-divs-expected.txt: Removed.
        * platform/chromium-win/fast/events/panScroll-nested-divs.html: Removed.
