@@ -24,12 +24,12 @@ function test()
         WebInspector.Cookies.getCookiesAsync(step3);
     }
 
-    function step3(allCookies, isAdvanced)
+    function step3(allCookies)
     {
         for (var i = 0; i < allCookies.length; i++) {
           var cookie = allCookies[i];
-            if (cookie.name === cookieName && cookie.domain() == cookieDomain) {
-                InspectorTest.addResult("Cookie: " + cookie.name + "=" + cookie.value + ".");
+            if (cookie.name() === cookieName && cookie.domain() == cookieDomain) {
+                InspectorTest.addResult("Cookie: " + cookie.name() + "=" + cookie.value() + ".");
             }
         }
         // Ensure cookie is deleted after testing.
