@@ -1,3 +1,14 @@
+2012-12-14  Eugene Klyuchnikov  <eustas@chromium.org>
+
+        http/tests/inspector/resource-main-cookies.php is broken on Mac after r137585
+        https://bugs.webkit.org/show_bug.cgi?id=104977
+
+        Reviewed by Vsevolod Vlasov.
+
+        Adopted Webkit Bug 104893 changes.
+
+        * http/tests/inspector/resource-main-cookies.php: Adopted changes.
+
 2012-12-13  Yoshifumi Inoue  <yosin@chromium.org>
 
         Copy platform/win/fast/events/panScroll-* to platform/chromium-win/fast/events
